--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <body>
     <h1>課題</h1>
     <p>スマホなどで写真を撮影し、その画像を表示するページを作成する</p>
-    <img src = "" alt = "" />
+    <img src = "image1.jpg" alt = "image1" />
   </body>
 </html>
