--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <body>
     <h1>課題</h1>
     <p>スマホなどで写真を撮影し、その画像を表示するページを作成する</p>
-    <img src = "https://raw.githubusercontent.com/yuki-takamura/2016web1-3/gh-pages/image1.JPG" alt = "image1" />
+    <img src = "http://yuki-takamura.github.io/2016web1-3/image1.JPG" alt = "image1" />
   </body>
 </html>
